# E_martMicroservice

./: compose.yml
Product_Service/Product_service/: .env  Dockerfile  pyproject.toml
Product_Service/Product_service/product_service/: crud.py  crudimage.py  image_routes.py  kafka.py  main.py  product.proto  product_pb2.py  rout.py  scehma.py
